@@ -99,6 +99,7 @@ where XXXXXX is the bug number as listed below.
 343978  Recognize DWARF5/GCC5 DW_LANG_Fortran 2003 and 2008 constants
 344007  accept4 syscall unhandled on arm64 (242) and ppc64 (344)
 344279  syscall sendmmsg on arm64 (269) and ppc32/64 (349) unhandled
+344295  syscall recvmmsg on arm64 (243) and ppc32/64 (343) unhandled
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
